// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_package = "com.meng.example.nettynio.nettyproto.bean";
option java_outer_classname = "Student";
option java_multiple_files = true;
package com.meng.nettyproto.bean;

// The greeting service definition.
service StudentService {

  rpc GetRealNameByUserName (MyRequest) returns (MyReply) {}

  rpc GetStudentsByAge(StudentRequest) returns (stream StudentResponse) {}

  rpc GetStudentsWrapperByAge(stream StudentRequest) returns (StudentResponseList) {}

  rpc BiTalk(stream StreamRequest) returns (stream StreamResponse){}
}

message StreamResponse {
  string response_name = 1;
}

message StreamRequest {
  string request_name = 1;
}

message StudentRequest {
  int32 age = 1;
}

message StudentResponse {
  string name = 1;
  int32 age = 2;
  string city = 3;
}

message StudentResponseList {
  repeated StudentResponse studentResponse = 1;
}

// The request message containing the user's name.
message MyRequest {
  string user_name = 1;
}

// The response message containing the greetings
message MyReply {
  string real_name = 1;
}
